# simple_flag

./: CMakeLists.txt  README.md  simple_flags.cpp  simple_flags.h
test/: CMakeLists.txt  main.cpp
